--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,11 @@
 <div class="headerWrap">
 <div class="bar headerBar headerBarWide">
 <div class="brand brandDark">
-<a href="./index.html" aria-label="Go to homepage"><img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/></a>
+<a aria-label="Go to homepage" href="./index.html"><img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/></a>
 </div>
-<div class="headerSearch">
-<input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/>
-<button aria-label="Search (placeholder)" class="searchBtn">
+<div class="cg-headerSearch headerSearch">
+<input aria-label="Search (placeholder)" class="cg-headerSearchInput" placeholder="Search for games or collectibles…" type="search"/>
+<button aria-label="Search (placeholder)" class="cg-headerSearchBtn searchBtn">
 <svg aria-hidden="true" height="18" viewbox="0 0 24 24" width="18">
 <path d="M10 4a6 6 0 104.472 10.01l3.259 3.258 1.414-1.414-3.258-3.259A6 6 0 0010 4zm0 2a4 4 0 110 8 4 4 0 010-8z" fill="currentColor"></path>
 </svg>
@@ -39,11 +39,10 @@
 <div class="container">
 <div class="panel" style="max-width:900px;">
 <h1 style="margin:0 0 10px;font-size:2.2rem;">Contact</h1>
-    <h3 style="margin-top:0;">Message us on eBay</h3>
+<h3 style="margin-top:0;">Message us on eBay</h3>
 <p style="margin:0 0 18px;max-width:900px;">
     For the fastest response, please contact us through eBay messages on any listing.
   </p>
-
 <p style="margin:0 0 14px;">
       Visit our eBay store and send a message—this helps keep all order details and buyer protection in one place.
     </p>
@@ -75,5 +74,5 @@
 </div>
 </div>
 </footer>
-</body>
+<script src="products.js"></script><script src="app.js"></script></body>
 </html>
