--- a/shipping.html
+++ b/shipping.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Shipping | Capital Games</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&family=Bebas+Neue&display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&amp;family=Bebas+Neue&amp;display=swap" rel="stylesheet"/>
 <link href="./style.css" rel="stylesheet"/>
 </head>
 <body class="bgTexture" id="top"><header class="siteHeader">
@@ -15,11 +15,11 @@
 <div class="headerWrap">
 <div class="bar headerBar headerBarWide">
 <div class="brand brandDark">
-<a href="./index.html" aria-label="Go to homepage"><img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/></a>
+<a aria-label="Go to homepage" href="./index.html"><img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/></a>
 </div>
-<div class="headerSearch">
-<input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/>
-<button aria-label="Search (placeholder)" class="searchBtn">
+<div class="cg-headerSearch headerSearch">
+<input aria-label="Search (placeholder)" class="cg-headerSearchInput" placeholder="Search for games or collectibles…" type="search"/>
+<button aria-label="Search (placeholder)" class="cg-headerSearchBtn searchBtn">
 <svg aria-hidden="true" height="18" viewbox="0 0 24 24" width="18">
 <path d="M10 4a6 6 0 104.472 10.01l3.259 3.258 1.414-1.414-3.258-3.259A6 6 0 0010 4zm0 2a4 4 0 110 8 4 4 0 010-8z" fill="currentColor"></path>
 </svg>
@@ -37,7 +37,7 @@
 </header>
 <div class="container">
 <div class="panel" style="max-width:900px;">
-    <h1 style="margin:0 0 10px;font-size:2.2rem;">Shipping</h1>
+<h1 style="margin:0 0 10px;font-size:2.2rem;">Shipping</h1>
 <p style="margin:0 0 18px;max-width:900px;">
     We’re based in Canada and ship worldwide. Every order is carefully packed and protected.
     Final shipping costs, services, and delivery estimates are shown on eBay at checkout.
@@ -81,5 +81,5 @@
 </div>
 </div>
 </footer>
-</body>
+<script src="products.js"></script><script src="app.js"></script></body>
 </html>
